--- a/work/step_03/index01.html
+++ b/work/step_03/index01.html
@@ -21,18 +21,70 @@
 			 <nav id="gnb">
 			 <h2>우양 전체메뉴</h2>
 				<ul>
-					<li><a href="#">nav</a></li>
-					<li><a href="#">nav</a></li> 
-					<li><a href="#">nav</a></li>
-					<li><a href="#">nav</a></li>
-					<li><a href="#">nav</a></li>
-					<li><a href="#">nav</a></li>
+					<li class="gnb_01"><a href="#"><img src="./img/headBox/gnb_01.png" alt="company"></a></li>
+					<li class="gnb_02"><a href="#"><img src="./img/headBox/gnb_02.png" alt="store"></a></li> 
+					<li class="gnb_03"><a href="#"><img src="./img/headBox/gnb_03.png" alt="reservation"></a></li>
+					<li class="gnb_04"><a href="#"><img src="./img/headBox/gnb_04.png" alt="news and event"></a></li>
+					<li class="gnb_05"><a href="#"><img src="./img/headBox/gnb_05.png" alt="FAQ"></a></li>
+					<li class="gnb_06"><a href="#"><img src="./img/headBox/gnb_06.png" alt="QnA"></a></li>
 				</nav>
 
 			</ul>
+			<!--<div class="head_bg">headBox 배경처리</div>-->
 		</header>
-		<aside id="lnb"></aside> 
-		<section id="container"></section>
+		<aside id="lnb">
+			<h2>우양 주요브랜드</h2>
+				<ul class="brand_main">
+					<li><a href="#"><img src="./img/lnb/lnb_01.png" alt="우양브랜드1"></a></li>
+					<li><a href="#"><img src="./img/lnb/lnb_02.png" alt="우양브랜드2"></a></li>
+					<li><a href="#"><img src="./img/lnb/lnb_03.png" alt="우양브랜드3"></a></li>
+					<li><a href="#"><img src="./img/lnb/lnb_04.png" alt="우양브랜드4"></a></li>
+				</ul>
+				<dl class="select_menu brand_sel_01">
+						<dt><a href="#">View more brand</a></dt>
+						 <dd><a href="#">Bassetti</a></dd>
+						 <dd><a href="#">Praseti</a></dd>
+						 <dd><a href="#">Christy</a></dd>
+						 <dd><a href="#">abyss habidecor</a></dd>
+						
+				</dl>
+				<dl class="select_menu brand_sel_02">
+						<dt><a href="#">Down comporter</a></dt>
+						 <dd><a href="#">Molina</a></dd>
+						 <dd><a href="#">Daunenstep</a></dd>
+						 <dd><a href="#">Dorbena</a></dd>
+						 <dd><a href="#">Trumina</a></dd>
+						 <dd><a href="#">Dauny</a></dd>
+				</dl>
+
+		</aside> 
+		<section id="container">
+			<div class="product">
+			<!-- 이미지 처리하는 방법
+			*1. img 코드로 작성하고, 넘치는 영역을 부모요소에서 overflow:hidden;
+			*2. background-image로 css 처리 (imagew, repeat, position)-->
+				<div class="mainproduct">
+				<a href="#">
+				<img src="./img/content/con_01.png" alt=" 우영의 대표 상품군 설명">
+				</a></div>
+				<div class="news_event">
+					<a href="#">
+					 <span class="hidden">news and event</span>
+					</a>
+				</div>
+				<div class="best_product">
+					<a href="#">
+						<span class="hidden"> 추천상품</span>
+					</a>
+				</div>
+			</div>
+			<div class="promotion">
+				<div class="reservation"></div>
+				<div class="e_shop"></div>
+				<div class="store_location"></div>
+			</div>
+
+		</section>
 		<nav id="fnb"></nav>
 		<footer id="footBox"></footer>
 	</div>
