--- a/work/step_03/index01.html
+++ b/work/step_03/index01.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="container">
 		<!-- header#headBox+aside#lnb+section#contain er+nav#fnb+footer#footBox-->
-		<header id="headBox">
+		<header id="headBox" class="back_line">
 			<h1><a href="index.html"><img src="./img/headBox/logo.png" alt="우양알앤비"></a></h1>
 			 <nav id="gnb">
 			 <h2>우양 전체메뉴</h2>
@@ -78,15 +78,29 @@
 					</a>
 				</div>
 			</div>
-			<div class="promotion">
-				<div class="reservation"></div>
-				<div class="e_shop"></div>
-				<div class="store_location"></div>
+			<div class="promotion link">
+
+				<div class="promotion_package">
+					<div class="reservation"><a href="#"><span>reservation</span></a></div>
+					<div class="e_shop"><a href="#"><span>e_shop</span></a></div>
+					</div>
+					<div class="store_location"><a href="#"><span>store_location></span></a></div>
 			</div>
 
 		</section>
-		<nav id="fnb"></nav>
-		<footer id="footBox"></footer>
+		<nav id="fnb" class="back_line"></nav>
+		<footer id="footBox" class="back_line">
+			<h2><span class="hidden">우양 알앤비</span></h2>
+			<address>
+				<p>(주)우양 알앰비 서울특별시 강남구 논현동 75-2 바세티 빌딩<br />
+				BASSETTI Bldg., 22, Nonhyeon-ro 142-gil, Gangnam-gu, Seoul, Korea</p>
+				<p>
+				<a href="mailto:info@wooyangmb.com">info@wooyangmb.com</a>
+				<a href="tel:+820251">T.02.518.4877</a>
+				</p>
+				<p><span class="hidden">copyrigh</span> &copy; WOOYANG RNB ALL right Reserved.</p>
+			</address>
+		</footer>
 	</div>
 	
 	
