--- a/work/step_04/grey_uccast.html
+++ b/work/step_04/grey_uccast.html
@@ -43,9 +43,7 @@
 	<aside id="lnb">
 		
 	</aside>
-	<section id="addBanner">
-		
-	</section>
+	<section id="addBanner"><a href="#"></a></section>
 	<article id="content">
 		<ul>
 			<li class="content_1"><a href="#"><img src="./img/article/content_1.png" alt="my_studio_consulting"></a></li>
@@ -61,11 +59,116 @@
 		</ul>
 		
 	</article>
-	<aside id="fnb">
-		
-	</aside>
+	<aside id="fnb"  class="back_line">
+		<nav class="menu">
+		<div class="upcast_is">
+			
+				<ul>
+				<p class="category">UPCAST IS</p><br>
+					<li><a href="#">-UPCAST IS</a></li>
+					<li><a href="#">-PREVIEW</a></li>
+					<li><a href="#">&nbsp; Encording Sample</a></li>
+					<li><a href="#">&nbsp; DRM-Player</a></li>
+					<li><a href="#">&nbsp; E-learning Web</a></li>
+					<li><a href="#">&nbsp; M-DRM Player</a></li>
+					<li><a href="#">&nbsp; Hybrid App</a></li>
+					<li><a href="#">&nbsp; M-learning Web</a></li>	
+				</ul>
+		</div>
+		<div class="my_studio">
+				<ul>
+				<p class="category">MY STUDIO</p><br>
+					<li><a href="#">-MY STUDIO</a></li>
+					<li><a href="#">-MY STUDIO Setting</a></li>
+					<li><a href="#">-동영상 제작 교육</a></li>
+					<li><a href="#">-MY STUDIO Live Encoder</a></li>
+					<li><a href="#">-MY STUDIO Video Edit</a></li>
+					<li><a href="#">-MY STUDIO Output Sample</a></li>
+					<li><a href="#">-MY STUDIO Live Broadcast</a></li>
+					<li><a href="#">-Live Sample Wep</a></li>
+					<li><a href="#">-Intro,Title 제작</a></li>	
+				</ul>
+		</div>
+		<div class="e_learning_lms">
+				<ul>
+				<p class="category">E-LEARNING LMS</p><br>
+					<li><a href="#">-제작 가능한 이러닝</a></li>
+					<li><a href="#">-웹디자인</a></li>
+					<li><a href="#">-이러닝 LMS</a></li>
+				</ul>
+		</div>
+		<div class="M_learning_lms">
+				<ul>
+				<p class="category">M-LEARNING</p><br>
+					<li><a href="#">-M-learning</a></li>
+					<li><a href="#">-Mobile Web</a></li>
+					<li><a href="#">-M-DRM Player</a></li>
+					<li><a href="#">-Mobile Hybrid APP</a></li>
+					<li><a href="#">-UC Voice Recoder</a></li>
+				</ul>
+		</div>
+		<div class="drm_player">
+			
+				<ul>
+				<p class="category">DRM PLAYER</p><br>
+					<li><a href="#">-PC</a></li>
+					<li><a href="#">&nbsp; DRM, 보안</a></li>
+					<li><a href="#">&nbsp; MP4 HD Player</a></li>
+					<li><a href="#">&nbsp; WMV HD Player</a></li>
+					<li><a href="#">-MOBILE</a></li>
+					<li><a href="#">&nbsp; Upcast Player</a></li>
+					<li><a href="#">&nbsp; Hybrid App</a></li>
+				</ul>
+		</div>
+		<div class="other_service">
+			
+				<ul>
+				<p class="category">OTHER SERVICE</p><br>
+					<li><a href="#">-CDN Service</a></li>
+					<li><a href="#">-개인정보보호</a></li>
+					<li><a href="#">&nbsp; 웹방화벽(H/W)</a></li>
+					<li><a href="#">&nbsp; DB암호화</a></li>
+					<li><a href="#">-결제솔루션</a></li>
+					<li><a href="#">&nbsp; 신용카드</a></li>
+					<li><a href="#">&nbsp; ARS계좌결제</a></li>
+					<li><a href="#">&nbsp; 계좌이체</a></li>
+					<li><a href="#">&nbsp; 가상계좌(무통장)</a></li>
+					<li><a href="#">&nbsp; 휴대폰</a></li>
+					<li><a href="#">&nbsp; 스마트폰 결제</a></li>
+					<li><a href="#">-타사 데이터 이전 서비스</a></li>
+				</ul>
+		</div>
+		<div class="pricing">
+				<ul>
+				<p class="category">PRICING</p><br>
+					<li><a href="#">-사양 및 가격</a></li>
+					<li><a href="#">-디자인/개발/연동</a></li>
+					<li><a href="#">서비스비용결제</a></li>
+				</ul>
+		</div>
+		<div class="introduce">
+				<ul>
+				<p class="category">회사소개</p><br>
+					<li><a href="#">-회사소개</a></li>
+					<li><a href="#">-오시는길</a></li>
+				</ul>
+		</div>
+		<div class="ask">
+				<ul>
+				<p class="category">고객센터</p><br>
+					<li><a href="#">-공지사항</a></li>
+					<li><a href="#">-업데이트</a></li>
+					<li><a href="#">-상담문의</a></li>
+					<li><a href="#">-원격지원</a></li>
+				</ul>
+		</div>
+		</nav>
+	</aside>	
 	<footer id="footBox">
-		
+		<div class="fnq"><img src="./img/footer/footBox_1.png" alt="map"></div>
+	 	<div class="map"><a href="#"><img src="./img/footer/footBox_2.png" alt="map"></a></div>
+	 	<div class="co"><img src="./img/footer/footBox_3.png" alt="map"></div>
+
 	</footer>
 </div>
 	
