--- a/work/step_05/jackhot.co.kr/index.html
+++ b/work/step_05/jackhot.co.kr/index.html
@@ -21,6 +21,7 @@
 			 </h1>
 			 
 			 <dl id="unb">
+
 			 	<dt><h2>member menu</h2></dt>
 			 	<dd></dd>
 			 </dl>
@@ -38,9 +39,55 @@
 
 			</header>
 
-			<aside   id="lnb"       class="back_line">lnb</aside>
-			<section id="addBanner">addBanner</section>
-			<section id="search"    class="back_line">search</section>
+			<aside   id="lnb"       class="back_line">
+				<dl class="clearfix">
+					<dt>
+						<h2>제품 홍보페이지</h2>
+					</dt>
+					<dd>promotion</dd>
+					<dd>product</dd>
+					<dd>after service</dd>
+					<dd>use test</dd>
+					<dd><abbr title="fREQUENTLY aSKED qUESTIONS">FAQ</abbr></dd>
+				</dl>
+			</aside>
+			<section id="addBanner">
+				<div class="btn left_btn">left</div>
+				<div class="btn right_btn">right</div>
+				<div class="mini_slide_banner">
+				<!--todo: #addbanner와 동일한 구조의 내용 추가 작성할것
+				  <ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				  </ul>-->
+			    </div>	
+				<ul class="full_slide_banner">
+					<li class="full_slide_list_01"></li>
+					<li class="full_slide_list_02"></li>
+					<li class="full_slide_list_03"></li>
+					<li class="full_slide_list_04"></li>
+				</ul>
+			
+			</section>
+			<section id="search"    class="back_line">
+			  <h2>상품 검색</h2>
+				<form action="#" method="get">
+				 <fieldset>
+				 	<legend class="hidden">상품 검색 창</legend>
+				 	<label for="productSearch" class="hidden">필요한 상품을 검색하세요</label>	
+				 	<input type="text" name="productSearch" id="productSearch" value="" role="search"/>
+				 	<input type="button" name="searchButton" id="searchButton" value="제품검색" role="button">
+				 	<label for="searchButton"> 
+				 	<i class="flaticon-magnifying-glass"></i> 
+				 	<span class="hidden">제품검색</span>
+				 	</label>
+				 	
+				 </fieldset>	
+
+				</form>
+			</section>
 			<section id="infoBank"   class="back_line">infoBank</section>
 			<article id="fnb"       class="back_line">fnb</article>
 			<footer  id="footBox"   class="back_line">footBox</footer>	
